@@ -5,7 +5,12 @@ Griffith ChangeLog
 (c) 2005-2006 Vasco Nunes
 
 2006-01-28 Piotr Ozarowski <ozarow@gmail.com>
-	* Added Languages feature (still needs testing)
+	* Movie number is now editable
+	* Some language feature fixes
+
+2006-01-28 Piotr Ozarowski <ozarow@gmail.com>
+	* Added languages feature (beta version)
+	* Added tags feature (alpha version)
 
 2006-01-24 Vasco Nunes <vasco.m.nunes@gmail.com>
 	* Fixed bug with spellchecker initialization when an aspell word list is not installed.
